update pom.xml expland & md5 import